fixed a lot of images etc.

--- a/doc/thesis/intro.tex
+++ b/doc/thesis/intro.tex
@@ -256,7 +256,7 @@ studies that show CBV and CBF returning to the baseline before the BOLD signal
 (\cite{Frahm2008}, \cite{Donahue2009}, \cite{Buxton2004}, \cite{Lu2004},
 \cite{Shen2008}). Unfortunately, because of limitations on FMRI and in vivo
 CBV/CBF measurement techniques it is difficult to isolate whether CBF and
-CBV truly have returned to their baseline. Other studies seems to indicate
+CBV truly have returned to their baseline. Other studies indicate
 that there can be a prolonged supernormal CBV (\cite{Mandeville1999a}, 
 \cite{Behzadi2005}, \cite{Chen2009a}), although none of these papers completely
 rule out the possibility of increased CMRO2. The discrepancies may in part
