--- a/doc/thesis/particlefilters.tex
+++ b/doc/thesis/particlefilters.tex
@@ -9,7 +9,8 @@ time-varying random variables. The idea behind particle filters is
 similar to Kalman Filters; however, unlike Kalman Filters,
 distributions are stored as an empircal distribution rather than the
 as the first two moments of a Gaussian. Thus particle filters are 
-preferred when the model is nonlinear, and thus non-gaussian.
+preferred when the model is nonlinear, and thus non-gaussian. This section
+is largely based on \cite{Arulampalam2002a} and \cite{Thrun2005}.
 
 \section{Model}
 \label{sec:Particle Filter Model}
