--- a/doc/thesis/resultsB.tex
+++ b/doc/thesis/resultsB.tex
@@ -94,11 +94,11 @@ thresheld at $.85$ rather than $1$. Obviously this image seems like a closer mat
 the results of SPM, however, the results of \autoref{fig:hm_canon_pfilter} are interesting.
 
 \begin{figure}[H]
-\subfigure[]{\label{fig:hm_spm} \includegraphics[scale=.66]{images/spm_hm}}
-\subfigure[]{\label{fig:hm_canon_spm_x} \includegraphics[scale=.85]{images/spm_hm_x}}
-\subfigure[]{\label{fig:hm_canon_spm_y} \includegraphics[scale=.85]{images/spm_hm_y}}
-\subfigure[]{\label{fig:hm_canon_spm_z} \includegraphics[scale=.85]{images/spm_hm_z}}
-\subfigure{\label{fig:scale_spm} \includegraphics[scale=.3]{images/scale1}}
+\subfigure[]{\label{fig:hm_spm} \includegraphics[scale=3]{images/spm_hm}}
+\subfigure[]{\label{fig:hm_canon_spm_x} \includegraphics[scale=3]{images/spm_hm_x}}
+\subfigure[]{\label{fig:hm_canon_spm_y} \includegraphics[scale=3]{images/spm_hm_y}}
+\subfigure[]{\label{fig:hm_canon_spm_z} \includegraphics[scale=3]{images/spm_hm_z}}
+\subfigure{\label{fig:scale_spm} \includegraphics[scale=.5]{images/scale1}}
 \caption{Sagittal, coronal and axial slices of SPM results (\autoref{fig:hm_canon_spm_x} \autoref{fig:hm_canon_spm_y} 
          \autoref{fig:hm_canon_spm_x}), as well as a series of axial slices, \autoref{fig:hm_spm}. Units
          of activation are in Student's T-scores. Higher indicates higher assurance that the signal cannot
@@ -107,11 +107,11 @@ the results of SPM, however, the results of \autoref{fig:hm_canon_pfilter} are i
 \end{figure}
 
 \begin{figure}[H]
-\subfigure[]{\label{fig:hm_pfilter} \includegraphics[scale=.66]{images/pfilter_hm}}
-\subfigure[]{\label{fig:hm_canon_pfilter_x} \includegraphics[scale=.85]{images/pfilter_hm_x}}
-\subfigure[]{\label{fig:hm_canon_pfilter_y} \includegraphics[scale=.85]{images/pfilter_hm_y}}
-\subfigure[]{\label{fig:hm_canon_pfilter_z} \includegraphics[scale=.85]{images/pfilter_hm_z}}
-\subfigure{\label{fig:scale_pfilter} \includegraphics[scale=.3]{images/scale2}}
+\subfigure[]{\label{fig:hm_pfilter} \includegraphics[scale=3]{images/pfilter_hm}}
+\subfigure[]{\label{fig:hm_canon_pfilter_x} \includegraphics[scale=3]{images/pfilter_hm_x}}
+\subfigure[]{\label{fig:hm_canon_pfilter_y} \includegraphics[scale=3]{images/pfilter_hm_y}}
+\subfigure[]{\label{fig:hm_canon_pfilter_z} \includegraphics[scale=3]{images/pfilter_hm_z}}
+\subfigure{\label{fig:scale_pfilter} \includegraphics[scale=.5]{images/scale2}}
 \caption{Sagittal, coronal and axial slices of SPM results (\autoref{fig:hm_canon_pfilter_x} \autoref{fig:hm_canon_pfilter_y} 
          \autoref{fig:hm_canon_pfilter_x}), as well as a series of axial slices, \autoref{fig:hm_pfilter}. 
          Units of match is normalized error. The lowest (best) levels were $.7$,
@@ -120,11 +120,11 @@ the results of SPM, however, the results of \autoref{fig:hm_canon_pfilter} are i
 \end{figure}
 
 \begin{figure}[H]
-\subfigure[]{\label{fig:hm_pfilter85} \includegraphics[scale=.66]{images/pfilter85_hm}}
-\subfigure[]{\label{fig:hm_canon_pfilter85_x} \includegraphics[scale=.85]{images/pfilter_hm85_x}}
-\subfigure[]{\label{fig:hm_canon_pfilter85_y} \includegraphics[scale=.85]{images/pfilter_hm85_y}}
-\subfigure[]{\label{fig:hm_canon_pfilter85_z} \includegraphics[scale=.85]{images/pfilter_hm85_z}}
-\subfigure{\label{fig:scale_pfilter85} \includegraphics[scale=.3]{images/scale3}}
+\subfigure[]{\label{fig:hm_pfilter85} \includegraphics[scale=3]{images/pfilter85_hm}}
+\subfigure[]{\label{fig:hm_canon_pfilter85_x} \includegraphics[scale=3]{images/pfilter_hm85_x}}
+\subfigure[]{\label{fig:hm_canon_pfilter85_y} \includegraphics[scale=3]{images/pfilter_hm85_y}}
+\subfigure[]{\label{fig:hm_canon_pfilter85_z} \includegraphics[scale=3]{images/pfilter_hm85_z}}
+\subfigure{\label{fig:scale_pfilter85} \includegraphics[scale=.5]{images/scale3}}
 \caption{Sagittal, coronal and axial slices of SPM results (\autoref{fig:hm_canon_pfilter_x} \autoref{fig:hm_canon_pfilter_y} 
          \autoref{fig:hm_canon_pfilter_x}), as well as a series of axial slices, \autoref{fig:hm_pfilter}. 
          Units of match is normalized $\sqrt{MSE}$. The lowest (best) levels were $.7$,
