--- a/doc/thesis/methods.tex
+++ b/doc/thesis/methods.tex
@@ -272,7 +272,7 @@ due to a physiological effects, given its presence in cadavers and phantoms
 more prevalent at interfaces between regions, though 
 by no means limited to such areas. Though one potential source
 could be slight movement, given that co-registration of volumes to a single time
-point is standard, this seems unlikely. Regardless, the problem mandates
+point is standard, this is unlikely. Regardless, the problem mandates
 the use of a high pass filter to make inference reasonably powered
 \cite{Smith2007}.
 
@@ -327,10 +327,10 @@ fit the Gaussian distribution. Note that in \autoref{fig:QQDC} the points have a
 normalized (changed to percent difference).
 \begin{figure}
 \centering
-\subfigure[]{\label{fig:QQDC:A}\includegraphics[trim=6cm 1cm 6cm 0cm,width=14cm]{images/noise2_0009_29_49_9}}
-\subfigure[]{\label{fig:QQDC:B}\includegraphics[trim=6cm 1cm 6cm 0cm,width=14cm]{images/noise2_0009_34_43_24}}
-\subfigure[]{\label{fig:QQDC:C}\includegraphics[trim=6cm 1cm 6cm 0cm,width=14cm]{images/noise2_0009_22_38_23}}
-\subfigure[]{\label{fig:QQDC:D}\includegraphics[trim=6cm 1cm 6cm 0cm,width=14cm]{images/noise2_0009_37_29_24}}
+\subfigure[]{\label{fig:QQDC:A}\includegraphics[trim=6cm 1cm 6cm 1cm,width=13cm]{images/noise2_0009_29_49_9}}
+\subfigure[]{\label{fig:QQDC:B}\includegraphics[trim=6cm 1cm 6cm 1cm,width=13cm]{images/noise2_0009_34_43_24}}
+\subfigure[]{\label{fig:QQDC:C}\includegraphics[trim=6cm 1cm 6cm 1cm,width=13cm]{images/noise2_0009_22_38_23}}
+\subfigure[]{\label{fig:QQDC:D}\includegraphics[trim=6cm 1cm 6cm 1cm,width=13cm]{images/noise2_0009_37_29_24}}
 
 %\subfigure{\includegraphics[trim=6cm 1cm 0 0cm,width=17cm]{images/noise_0009_19-24-10.pdf}}
 %\subfigure{\includegraphics[trim=6cm 1cm 0 0cm,width=17cm]{images/noise_0009_20-45-18.pdf}}
@@ -343,10 +343,10 @@ normalized (changed to percent difference).
 
 \begin{figure}
 \centering
-\subfigure[]{\label{fig:QQDDelta:A}\includegraphics[trim=6cm 1cm 6cm 0,width=14cm]{images/noise2_0009d_29_49_9}}
-\subfigure[]{\label{fig:QQDDelta:B}\includegraphics[trim=6cm 1cm 6cm 0,width=14cm]{images/noise2_0009d_34_43_24}}
-\subfigure[]{\label{fig:QQDDelta:C}\includegraphics[trim=6cm 1cm 6cm 0,width=14cm]{images/noise2_0009d_22_38_23}}
-\subfigure[]{\label{fig:QQDDelta:D}\includegraphics[trim=6cm 1cm 6cm 0,width=14cm]{images/noise2_0009d_37_29_24}}
+\subfigure[]{\label{fig:QQDDelta:A}\includegraphics[trim=6cm 1cm 6cm 1cm,width=13cm]{images/noise2_0009d_29_49_9}}
+\subfigure[]{\label{fig:QQDDelta:B}\includegraphics[trim=6cm 1cm 6cm 1cm,width=13cm]{images/noise2_0009d_34_43_24}}
+\subfigure[]{\label{fig:QQDDelta:C}\includegraphics[trim=6cm 1cm 6cm 1cm,width=13cm]{images/noise2_0009d_22_38_23}}
+\subfigure[]{\label{fig:QQDDelta:D}\includegraphics[trim=6cm 1cm 6cm 1cm,width=13cm]{images/noise2_0009d_37_29_24}}
 \caption{Q-Q Plots of resting state data, using the BOLD signal changes}
 \label{fig:QQDelta}
 \end{figure}
@@ -362,15 +362,14 @@ closely to the normal distribution.
 As expected, most of the autocorrelation disappears for the step data. Given
 that the steps seem to fit the Normal distribution, the low autocorrelation
 indicates that the steps could be Independently Distributed. 
-Therefore, the assumption that the noise follows a Wiener process seems to
-be correct. 
+Therefore, the noise does come close to a Wiener process. 
 
 \begin{figure}
 \centering
-\subfigure[]{\label{fig:QQs:A}\includegraphics[trim=6cm 1cm 6cm 0cm,width=14cm]{images/noise2_0009s_29_49_9}}
-\subfigure[]{\label{fig:QQs:B}\includegraphics[trim=6cm 1cm 6cm 0cm,width=14cm]{images/noise2_0009s_34_43_24}}
-\subfigure[]{\label{fig:QQs:C}\includegraphics[trim=6cm 1cm 6cm 0cm,width=14cm]{images/noise2_0009s_22_38_23}}
-\subfigure[]{\label{fig:QQs:D}\includegraphics[trim=6cm 1cm 6cm 0cm,width=14cm]{images/noise2_0009s_37_29_24}}
+\subfigure[]{\label{fig:QQs:A}\includegraphics[trim=6cm 1cm 6cm 1cm,width=13cm]{images/noise2_0009s_29_49_9}}
+\subfigure[]{\label{fig:QQs:B}\includegraphics[trim=6cm 1cm 6cm 1cm,width=13cm]{images/noise2_0009s_34_43_24}}
+\subfigure[]{\label{fig:QQs:C}\includegraphics[trim=6cm 1cm 6cm 1cm,width=13cm]{images/noise2_0009s_22_38_23}}
+\subfigure[]{\label{fig:QQs:D}\includegraphics[trim=6cm 1cm 6cm 1cm,width=13cm]{images/noise2_0009s_37_29_24}}
 \caption{Q-Q Plots of resting state data, after the de-trending}
 \label{fig:QQSpline}
 \end{figure}
@@ -398,8 +397,7 @@ filtering or other DC removal techniques is that the frequency response is not s
 Rather, the spline is adaptive to the input, having a low cut off if the signal's 
 median stays constant but a high cut off frequency if the signal's median tends to
 shift heavily over the course of time. In spite of this, the spline will still remove some
-amount of signal, just like all of these methods, which is why I considered the method proposed
-in \autoref{sec:Methods Delta Based Inference}.
+amount of signal.
 
 The method I used to calculate the spline was picking one knot for every 20
 measurements in an image. Thus a 10 minute session at a repetition time of 
@@ -407,8 +405,8 @@ measurements in an image. Thus a 10 minute session at a repetition time of
 given half the number of samples as the rest of the knots; which were all 
 located at the center of their sample group. The median of each sample group
 was then taken and used as the magnitude for the group. Taking the median 
-versus the mean seemed to work better, given the presence of outliers. It seems
-that there is potential to optimize the spline further using a canonical 
+versus the mean seemed to work better, given the presence of outliers. 
+There is potential to optimize the spline further using a canonical 
 HRF to find resting points; however, for this to work the experiment would have
 to be designed with this in mind. 
 
@@ -434,16 +432,11 @@ proved to be accurate in determining how much to shift the signal up
 by. I tested both methods during the course of analysis, and found that the increase 
 in model complexity far outweighed the slight increase in flexibility. Its 
 possible that a more accurate method may exist; however, for this case the 
-MAD seems to work as it should, as \autoref{fig:DesplineQuality} shows. 
+MAD works well, as \autoref{fig:PreprocessedLowNoise} and \autoref{fig:PreprocessedHighNoise} show. 
 
 \begin{equation}
 y_{\text{gain}, 0:K} = 2\text{median}_{i=0:K}(y_i - \text{median}(y_{0:K}))
 \end{equation}
-
-\begin{figure}
-\caption{Image of de-spline'd lines with true lines}
-\label{fig:DesplineQuality}
-\end{figure}
 
 A serious concern with adding and subtracting arbitrary values to 
 real data is whether this will create false positives. This is a legitimate
